kubernetes-note.yaml
apiVersion: v1
kind: Service
metadata:
  name: k8-svc
#  namespace: test
spec:
  type: NodePort
  selector:
    app:  test-app
  ports:
    - targetPort: 8080
      port: 9100
      nodePort: 32020

---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: test-app
#  namespace: test
spec:
  replicas: 1
  selector:
    matchLabels:
      app: test-app
  template:
    metadata:
      labels:
        app: test-app
    spec: 
      containers: 
        - name: test-app 
          image: doyinayoola1/tomcat-jenk:latest
          ports: 
            - containerPort: 8080 
          livenessProbe:
            httpGet:
              path: /manager/html
              port: 8080
            initialDelaySeconds: 10
            periodSeconds: 5
          # resources:
          #   requests:
          #     cpu: "500m"
          #     memory: "256Mi"
