ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: multi-path-ingress
 # annotations:
   # nginx.ingress.kubernetes.io/rewrite-target: /
spec:
  rules:
    - http:
        paths:
          - path: /acada16
            pathType: Prefix
            backend:
              service:
                name: app1-svc
                port:
                  number: 80
          - path: /app2
            pathType: Prefix
            backend:
              service:
                name: app2-svc
                port:
                  number: 80

---

apiVersion: v1
kind: Service
metadata:
  name: app1-svc
spec:
  selector:
    app: test-app
  ports:
    - port: 80
      targetPort: 8080
